building single example script for cpp now

--- a/cpp/osm_sbki/CMakeLists.txt
+++ b/cpp/osm_sbki/CMakeLists.txt
@@ -7,7 +7,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 option(OSM_SBKI_ENABLE_WARNINGS "Enable compiler warnings" ON)
-option(OSM_SBKI_BUILD_PCL_EXAMPLES "Build PCL-based example programs" OFF)
+# Use set(... CACHE BOOL ...) so that -DOSM_SBKI_BUILD_PCL_EXAMPLES=ON on the command line is applied even when reconfiguring (option() would keep the first cached value).
+set(OSM_SBKI_BUILD_PCL_EXAMPLES OFF CACHE BOOL "Build PCL-based example program (visualize_map_osm)")
+set(OSMIUM_INCLUDE_DIR "" CACHE PATH "Path to libosmium include directory (e.g. /path/to/osmium/include; required for visualize_map_osm)")
+
+message(STATUS "OSM_SBKI_BUILD_PCL_EXAMPLES=${OSM_SBKI_BUILD_PCL_EXAMPLES}")
 
 set(OSM_SBKI_CORE_SOURCES
     src/continuous_bki.cpp
@@ -36,43 +40,41 @@ if(OSM_SBKI_ENABLE_WARNINGS)
 endif()
 
 if(OSM_SBKI_BUILD_PCL_EXAMPLES)
+    message(STATUS "PCL example requested; looking for MPI, PCL, and libosmium...")
     find_package(MPI REQUIRED COMPONENTS C)
     find_package(PCL QUIET COMPONENTS common io visualization)
-    if(PCL_FOUND)
-        find_package(PkgConfig QUIET)
-        if(PKG_CONFIG_FOUND)
-            pkg_check_modules(LIBOSMIUM QUIET libosmium)
+    message(STATUS "PCL found: ${PCL_FOUND}")
+
+    find_package(PkgConfig QUIET)
+    if(PKG_CONFIG_FOUND)
+        pkg_check_modules(LIBOSMIUM QUIET libosmium)
+    endif()
+    if(NOT LIBOSMIUM_FOUND)
+        if(OSMIUM_INCLUDE_DIR AND EXISTS "${OSMIUM_INCLUDE_DIR}/osmium/io/any_input.hpp")
+            set(LIBOSMIUM_INCLUDE_DIRS "${OSMIUM_INCLUDE_DIR}")
+            set(LIBOSMIUM_FOUND TRUE)
+        elseif(EXISTS "/usr/include/osmium/io/any_input.hpp")
+            set(LIBOSMIUM_INCLUDE_DIRS "/usr/include")
+            set(LIBOSMIUM_FOUND TRUE)
+        elseif(EXISTS "/usr/local/include/osmium/io/any_input.hpp")
+            set(LIBOSMIUM_INCLUDE_DIRS "/usr/local/include")
+            set(LIBOSMIUM_FOUND TRUE)
         endif()
+    endif()
+    message(STATUS "libosmium found: ${LIBOSMIUM_FOUND}")
 
-        if(NOT LIBOSMIUM_FOUND)
-            if(EXISTS "/usr/include/osmium/io/any_input.hpp")
-                set(LIBOSMIUM_INCLUDE_DIRS "/usr/include")
-                set(LIBOSMIUM_FOUND TRUE)
-            elseif(EXISTS "/usr/local/include/osmium/io/any_input.hpp")
-                set(LIBOSMIUM_INCLUDE_DIRS "/usr/local/include")
-                set(LIBOSMIUM_FOUND TRUE)
-            endif()
-        endif()
-
-        add_executable(visualize_map examples/visualize_map.cpp)
-        target_include_directories(visualize_map PRIVATE ${PCL_INCLUDE_DIRS})
-        target_link_libraries(visualize_map PRIVATE osm_sbki_core ${PCL_LIBRARIES})
-        target_compile_options(visualize_map PRIVATE ${PCL_DEFINITIONS})
-
-        if(LIBOSMIUM_FOUND)
-            add_executable(visualize_osm examples/visualize_osm.cpp src/osm_parser.cpp)
-            target_include_directories(visualize_osm PRIVATE ${PCL_INCLUDE_DIRS} ${LIBOSMIUM_INCLUDE_DIRS})
-            target_link_libraries(visualize_osm PRIVATE osm_sbki_core ${PCL_LIBRARIES} expat bz2 z)
-            target_compile_options(visualize_osm PRIVATE ${PCL_DEFINITIONS})
-
-            add_executable(visualize_map_osm examples/visualize_map_osm.cpp src/osm_parser.cpp)
-            target_include_directories(visualize_map_osm PRIVATE ${PCL_INCLUDE_DIRS} ${LIBOSMIUM_INCLUDE_DIRS})
-            target_link_libraries(visualize_map_osm PRIVATE osm_sbki_core ${PCL_LIBRARIES} expat bz2 z)
-            target_compile_options(visualize_map_osm PRIVATE ${PCL_DEFINITIONS})
-        else()
-            message(STATUS "libosmium headers not found. Skipping osmium-based example targets.")
-        endif()
+    if(PCL_FOUND AND LIBOSMIUM_FOUND)
+        message(STATUS "Adding example: visualize_map_osm")
+        add_executable(visualize_map_osm examples/visualize_map_osm.cpp src/osm_parser.cpp)
+        target_include_directories(visualize_map_osm PRIVATE ${PCL_INCLUDE_DIRS} ${LIBOSMIUM_INCLUDE_DIRS})
+        target_link_libraries(visualize_map_osm PRIVATE osm_sbki_core ${PCL_LIBRARIES} expat bz2 z)
+        target_compile_options(visualize_map_osm PRIVATE ${PCL_DEFINITIONS})
     else()
-        message(STATUS "PCL not found. Skipping PCL example targets.")
+        if(NOT PCL_FOUND)
+            message(STATUS "PCL not found. Skipping example target visualize_map_osm.")
+        endif()
+        if(NOT LIBOSMIUM_FOUND)
+            message(STATUS "libosmium not found. Set OSMIUM_INCLUDE_DIR to enable visualize_map_osm.")
+        endif()
     endif()
 endif()
