--- a/python/scripts/dataset_examples/labels_semkitti.yaml
+++ b/python/scripts/dataset_examples/labels_semkitti.yaml
@@ -133,14 +133,14 @@ learning_map:
   80: 18    # "pole"
   81: 19    # "traffic-sign"
   99: 0     # "other-object" to "unlabeled" ----------------------------mapped
-  252: 20    # "moving-car"
-  253: 21    # "moving-bicyclist"
-  254: 22    # "moving-person"
-  255: 23    # "moving-motorcyclist"
-  256: 24    # "moving-on-rails" mapped to "moving-other-vehicle" ------mapped
-  257: 24    # "moving-bus" mapped to "moving-other-vehicle" -----------mapped
-  258: 25    # "moving-truck"
-  259: 24    # "moving-other-vehicle"
+  252: 1    # "moving-car" to "car" ------------------------------------mapped
+  253: 7    # "moving-bicyclist" to "bicyclist" ------------------------mapped
+  254: 6    # "moving-person" to "person" ------------------------------mapped
+  255: 8    # "moving-motorcyclist" to "motorcyclist" ------------------mapped
+  256: 5    # "moving-on-rails" mapped to "other-vehicle" --------------mapped
+  257: 5    # "moving-bus" mapped to "other-vehicle" -------------------mapped
+  258: 4    # "moving-truck" to "truck" --------------------------------mapped
+  259: 5    # "moving-other"-vehicle to "other-vehicle" ----------------mapped
 learning_map_inv: # inverse of previous map
   0: 0      # "unlabeled", and others ignored
   1: 10     # "car"
@@ -162,9 +162,3 @@ learning_map_inv: # inverse of previous map
   17: 72    # "terrain"
   18: 80    # "pole"
   19: 81    # "traffic-sign"
-  20: 252    # "moving-car"
-  21: 253    # "moving-bicyclist"
-  22: 254    # "moving-person"
-  23: 255    # "moving-motorcyclist"
-  24: 259    # "moving-other-vehicle"
-  25: 258    # "moving-truck"
