--- a/configs/kitti360_config.yaml
+++ b/configs/kitti360_config.yaml
@@ -36,24 +36,25 @@ colors:
   "12": [255, 255, 50]   # other-object
 
 # ---------------------------------------------------------------------------
-# Confusion matrix (13x6): rows = common taxonomy ID 0-12
-# cols = OSM prior classes: [roads, parking, sidewalks, vegetation, buildings, fences]
-#                                 0      1       2          3          4         5
+# Confusion matrix (13x8): rows = common taxonomy ID 0-12
+# cols = OSM prior classes:
+#   [roads, parking, sidewalks, vegetation, buildings, fences, poles, traffic_signs]
+#       0      1        2          3           4         5       6         7
 # ---------------------------------------------------------------------------
 confusion_matrix:
-  - [0.00, 0.00, 0.00, 0.00, 0.00, 0.00]  # 0: unlabeled    (no signal)
-  - [0.90, 0.50, 0.10, 0.01, 0.00, 0.01]  # 1: road
-  - [0.10, 0.30, 0.80, 0.05, 0.00, 0.05]  # 2: sidewalk
-  - [0.20, 0.85, 0.15, 0.01, 0.00, 0.01]  # 3: parking
-  - [0.15, 0.20, 0.30, 0.20, 0.00, 0.05]  # 4: other-ground
-  - [0.00, 0.00, 0.00, 0.05, 0.95, 0.05]  # 5: building
-  - [0.05, 0.05, 0.10, 0.10, 0.10, 0.85]  # 6: fence
-  - [0.10, 0.10, 0.15, 0.10, 0.05, 0.15]  # 7: pole
-  - [0.10, 0.10, 0.15, 0.05, 0.05, 0.10]  # 8: traffic-sign
-  - [0.20, 0.10, 0.20, 0.90, 0.15, 0.20]  # 9: vegetation
-  - [0.50, 0.50, 0.30, 0.05, 0.00, 0.05]  # 10: two-wheeler
-  - [0.75, 0.70, 0.15, 0.02, 0.00, 0.02]  # 11: vehicle
-  - [0.10, 0.10, 0.10, 0.10, 0.05, 0.10]  # 12: other-object
+  - [0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00, 0.00]  # 0: unlabeled    (no signal)
+  - [0.90, 0.50, 0.10, 0.01, 0.00, 0.01, 0.05, 0.05]  # 1: road
+  - [0.10, 0.30, 0.80, 0.05, 0.00, 0.05, 0.05, 0.05]  # 2: sidewalk
+  - [0.20, 0.85, 0.15, 0.01, 0.00, 0.01, 0.01, 0.01]  # 3: parking
+  - [0.15, 0.20, 0.30, 0.20, 0.00, 0.05, 0.02, 0.02]  # 4: other-ground
+  - [0.00, 0.00, 0.00, 0.05, 0.95, 0.05, 0.02, 0.02]  # 5: building
+  - [0.05, 0.05, 0.10, 0.10, 0.10, 0.85, 0.05, 0.05]  # 6: fence
+  - [0.10, 0.10, 0.15, 0.10, 0.05, 0.10, 0.85, 0.20]  # 7: pole
+  - [0.10, 0.10, 0.15, 0.05, 0.05, 0.05, 0.20, 0.85]  # 8: traffic-sign
+  - [0.20, 0.10, 0.20, 0.90, 0.15, 0.20, 0.05, 0.05]  # 9: vegetation
+  - [0.50, 0.50, 0.30, 0.05, 0.00, 0.05, 0.02, 0.02]  # 10: two-wheeler
+  - [0.75, 0.70, 0.15, 0.02, 0.00, 0.02, 0.02, 0.02]  # 11: vehicle
+  - [0.10, 0.10, 0.10, 0.10, 0.05, 0.10, 0.10, 0.10]  # 12: other-object
 
 # OSM category mapping to prior class column indices
 osm_class_map:
@@ -65,6 +66,9 @@ osm_class_map:
   wood: 3
   buildings: 4
   fences: 5
+  barriers: 5
+  poles: 6
+  traffic_signs: 7
 
 # GPS reference for Mercator projection of OSM features into the LiDAR world frame.
 # If omitted, the parser falls back to the <bounds> centroid in the OSM file,
@@ -73,10 +77,16 @@ osm_class_map:
 osm_origin_lat: 48.985
 osm_origin_lon: 8.39295
 
-# OSM categories in binary file order
+# OSM categories (for binary file loading order)
 osm_categories:
   - buildings
   - roads
+  - sidewalks
+  - parking
   - grasslands
   - trees
   - wood
+  - fences
+  - poles
+  - traffic_signs
+  - barriers
